<resources>
    <string name="app_name">HochschulCrawler</string>
    <string name="title_activity_main">Hochschul Crawler</string>
    <string name="privacypolicy">1. Beschreibung und Umfang der Datenverarbeitung:
                            \nBeim Absenden des nachfolgenden Formulars werden folgende personenbezogene Daten durch die Applikation erhoben und abgespeichert:
                            \n• Rechenzentrums-/Fachhochschulkennung
                            \n• Das zugehörige Passwort
                            \n• Belegte und absolvierte Modulfächer an der Hochschule
                            \n• Die Noten der eigenen Modulfächer
                            \n\n2. Zweck der Datenverarbeitung:
                            \nDie vorübergehende Speicherung der unter 1. genannten Daten dient dem Zweck der Übermittlung an die Hochschule, sich dort anzumelden und die eigenen Leistungen auszuwerten.
                            \n\n3. Dauer der Speicherung:
                            \nDie personenbezognen Daten werden unwiderruflich und sofortig gelöscht, sobald der Nutzer die Applikation über die im Betriebssystem vorgegebene Methode zur Deinstallation vom Gerät entfernt.
                            \n\n4. Datenweitergabe:
                            \nEine Weitergabe der Rechenzentrums-/Fachhochschulkennung und des Passworts erfolgt zur Abfrage der jeweiligen Modulinformationen auf und an die Server der gewählten Hochschule.
                            \n\n5. Verantwortliche Stelle und Ansprechpartner für Fragen des Datenschutzes:
                            \nVerantwortlich für die Verarbeitung der personenbezogenen Daten auf den Hochschul-Servern ist die jeweilige Hochschule.
                            \nVerantwortlich für die Verarbeitung personenbezogener Daten in der Hochschul-Crawler Applikation ist:
                            \nMario Lampert
                            \nE-Mail: hochschulcrawler@gmail.com
                            \n\n6. Rechtsgrundlage:
                            \nSoweit für die Verarbeitungsvorgänge personenbezogener Daten eine Einwilligung der betroffenen Person eingeholt wird, dient Art. 6 Abs. 1 lit. a EU-Datenschutzgrundverordnung (DSGVO) als Rechtsgrundlage.
                            \n\n7. Ihre Rechte:
                            \nSie können von dem Verantwortlichen eine Bestätigung darüber verlangen, zu welchem Zweck die personenbezogenen Daten verarbeitet werden.
                            \n\n8. Recht auf Löschung/Widerrufsrecht:
                            \nSie können jederzeit Ihre Einwilligung widerrufen und die Applikation über die im Betriebssystem vorgegeben Weise zur Deinstallation vom Gerät entfernen. Damit einhergehend werden Ihre Daten vollständig vom Gerät entfernt.
                            \n\n9. Recht auf Beschwerde bei einer Aufsichtsbehörde:
                            Unbeschadet eines anderweitigen verwaltungsrechtlichen oder gerichtlichen Rechtsbehelfs steht Ihnen das Recht auf Beschwerde bei einer Aufsichtsbehörde, insbesondere in dem Mitgliedstaat Ihres Aufenthaltsorts, Ihres Arbeitsplatzes oder des Orts des mutmaßlichen Verstoßes, zu, wenn Sie der Ansicht sind, dass die Verarbeitung der Sie betreffenden personenbezogenen Daten gegen die DSGVO verstößt.
                            Die Aufsichtsbehörde, bei der die Beschwerde eingereicht wurde, unterrichtet den Beschwerdeführer über den Stand und die Ergebnisse der Beschwerde einschließlich der Möglichkeit eines gerichtlichen Rechtsbehelfs nach Art. 78 DSGVO.
                            \n\nDie vorliegende Datenschutzerklärung ist aktuell gültig und datiert vom 29. Januar 2022.</string>

    <string name="noteRestart">Now you can close the app.</string>
    <string name="dataEstimated">Every 60 minutes will be checked.\n Estimated data usage per month: 387 MByte</string>
    <string name="exceptNight">Except at night. Between 1 a.m. and 6 a.m is the QIS not reachable.</string>
    <string name="license">Changes on HtmlUnit licensed under Apache License Version 2.0. Shim code is under GNU GPL v2 licensed. <a href='https://github.com/Clinc8686/Hochschul-Crawler-Trier-Android-App'>click!</a></string>
    <string name="NotificationTitleService">QIS Hochschul Crawler Service</string>
    <string name="NotificationTextService">QIS Hochschul Crawler runs in background.</string>
    <string name="headerPrivacypolicy"><![CDATA[Datenschutzerklärung & Einwilligung zur Verarbeitung personenbezogener Daten]]></string>
    <string name="login_page_header">QIS Hochschul Crawler</string>
    <string name="benutzerkennung">Username</string>
    <string name="passwort">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="logged_in">Logged in</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="aktualisierungsintervall_waehlen">Choose the update interval</string>
    <string name="LoginSeconds">Dependig on your internet connection, the login process can take up to 30 seconds.</string>
    <string name="SwipeRight">Swipe to the right to see your grades.</string>
    <string name="rebootAppSeeGrades">1. Login \n2. Restart application\n3. See here your grades</string>
    <string name="SwipeLeft">Swipe to the left to login or logout.</string>
    <string name="LoginFailedTooManyFalse">Login failed! Too many login tries with wrong username/password! Your IP-Address is for a few minutes blocked.</string>
    <string name="LoginFailedWrong">Login failed! username/password wrong or no/unstable connection to the QIS!</string>
    <string name="benutzerkennungForm">Username</string>
    <string name="hrzloginForm">HRZ-Login</string>
    <string name="FHKennungForm">FH-Identifier</string>
    <string name="hinweis">Hint!</string>
    <string name="hinweisBerechtigung">Without the following permission, the application cannot run in an optimum way in the background.</string>
    <string name="agreement">Ich willige diesem ein</string>
    <string name="decline">Ich lehne ab</string>
    <string name="usernameOrPasswdEmpty">Username or password empty!</string>
    <string name="LoginFailedInNight">Login failed: Between 1 a.m. and 6 a.m is the QIS not reachable!</string>
    <string name="StoppedService"><![CDATA[Service was stopped and user data deleted.]]></string>
    <string name="All">Every </string>
    <string name="MinutesToUpdate"> minutes will be checked.\n</string>
    <string name="EstimatedUsage">Estimated data usage per month: </string>
    <string name="SearchingTesters">We are searching for testers from other universities! Contact us at hochschulcrawler@gmail.com</string>
    <string name="NewGrades">Es sind neue Noten verfügbar!</string>
    <string name="NewGradesFor">New grades for </string>
    <string name="in"> in </string>
    <string name="available"> available!</string>
    <string name="CheckForGrades">Checking for new grades.</string>
</resources>
