<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/homeLayout"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".HomeFragment">
    <!-- hier -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:layout_marginTop="10sp"
        android:gravity="center_vertical"
        android:text="@string/login_page_header"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        tools:ignore="RtlCompat"
        android:autoSizeTextType="uniform" />
    <!-- hier -->
    <EditText
        android:id="@+id/et_name"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:layout_marginTop="20sp"
        android:background="@drawable/inputfield"
        android:gravity="center_vertical"
        android:hint="@string/benutzerkennung"
        android:maxLength="50"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="180sp"
        android:layout_height="60sp"
        android:layout_marginTop="8sp"
        android:gravity="center_vertical"
        android:maxLength="100"
        android:background="@drawable/inputfield"
        android:hint="@string/passwort"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="RtlCompat"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="140sp"
        android:layout_height="40sp"
        android:layout_marginTop="16sp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_corner"
        android:enabled="true"
        android:text="@string/login"
        android:backgroundTint="#FF5722"
        android:textColor="#000000"
        android:onClick="loginClicked"/>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="20dp"
        android:indeterminateTint="#FF5722"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_marginTop="20sp"
        android:layout_width="360sp"
        android:layout_height="60sp"
        android:orientation="horizontal"
        android:layout_marginRight="10sp"
        android:layout_marginLeft="10sp"
        android:gravity="center_horizontal"
        android:onClick="GroupClicked">
        <RadioButton android:id="@+id/radioButtonTrier"
            android:layout_width="120sp"
            android:layout_height="60sp"
            android:buttonTint="#FF5722"
            android:text="HS Trier"
            android:checked="true" />
        <!--<RadioButton android:id="@+id/radioButtonAachen"
            android:layout_width="120sp"
            android:layout_height="60sp"
            android:buttonTint="#FF5722"
            android:text="FH Aachen" />
        <RadioButton android:id="@+id/radioButtonKoblenz"
            android:layout_width="120sp"
            android:layout_height="60sp"
            android:buttonTint="#FF5722"
            android:text="HS Koblenz" />-->
    </RadioGroup>

    <TextView
        android:id="@+id/appCloseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/noteRestart"
        android:textColor="#FFFFFF"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/loggingstatus_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/not_logged_in"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/intervall_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/aktualisierungsintervall_waehlen"
        android:textColor="#fff" />

    <SeekBar
        android:id="@+id/seekBar"
        android:splitTrack="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:thumb="@drawable/thumb"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:min="15"
        android:progress="60"
        android:max="60"
        android:progressDrawable="@drawable/seekbar_thumb"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:id="@+id/loginHint"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:text="@string/LoginSeconds"/>

    <TextView
        android:id="@+id/text_seekbar_minute"
        android:text="@string/dataEstimated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/text_qis_abschaltung"
        android:text="@string/exceptNight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="#D2FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scaleType="fitEnd"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_marginBottom="10sp">

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="#D2FFFFFF"
            android:text="@string/license"
            android:id="@+id/license"
            android:layout_marginBottom="10sp"/>-->

        <TextView
            android:id="@+id/swiperight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SwipeRight"
            android:textColor="#FFFFFF"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"/>
    </LinearLayout>
</LinearLayout>