<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/homeLayout"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:height="70dp"
        android:gravity="center_vertical"
        android:text="Noten Crawler"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="250dp"
        android:height="50dp"
        android:background="@drawable/inputfield"
        android:gravity="center_vertical"
        android:hint="Benutzerkennung"
        android:maxLength="15"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:width="250dp"
        android:gravity="center_vertical"
        android:maxLength="25"
        android:background="@drawable/inputfield"
        android:hint="Passwort"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="RtlCompat"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:width="250dp"
        android:background="@drawable/rounded_corner"
        android:enabled="true"
        android:text="Login"
        android:backgroundTint="#FF5722"
        android:textColor="#FFFFFF" />

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:indeterminateTint="#FF5722"
        android:visibility="gone" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radioButtonTrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FF5722"
            android:text="HS Trier"
            android:checked="true"/>
        <RadioButton android:id="@+id/radioButtonAachen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FF5722"
            android:text="FH Aachen" />
        <RadioButton android:id="@+id/radioButtonKoblenz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FF5722"
            android:text="HS Koblenz" />
    </RadioGroup>

    <TextView
        android:id="@+id/appCloseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/noteRestart"
        android:textColor="#FFFFFF"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/loggingstatus_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="17sp"
        android:text="Not logged in"
        android:textColor="#FF0000" />

    <TextView
        android:id="@+id/intervall_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Wähle hier das Aktualisierungsintervall aus"
        android:textColor="#FFFFFF" />

    <SeekBar
        android:id="@+id/seekBar"
        android:splitTrack="false"
        android:layout_width="250dp"
        android:layout_height="3dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFF"
        android:thumbTint="#FF5722"
        android:thumb="@drawable/thumb"
        android:background="@drawable/rounded_corner"
        android:min="15"
        android:progress="60"
        android:max="60"
        android:scaleY="5.5"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:thumbOffset="8dp"
        android:progressDrawable="@drawable/seekbar_thumb"
        />

    <TextView
        android:id="@+id/text_seekbar_minute"
        android:text="@string/dataEstimated"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/text_qis_abschaltung"
        android:text="@string/exceptNight"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textColor="#9CFFFFFF" />

    <!--<Switch
        android:id="@+id/gradeswitch"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:checked="false"
        android:showText="true"
        android:thumb="@drawable/gradeswitch"
        android:switchMinWidth="40dp"
        android:switchPadding="10dp"
        android:backgroundTint="#fff"
        android:text="Ich möchte direkt über meine Noten benachrichtigt werden:"
        android:textOff="nein"
        android:textOn="ja"

        />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scaleType="fitEnd"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="bottom"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:background="@drawable/filledcircle"
            android:layout_marginRight="10dp"/>

        <Button
            android:layout_height="20dp"
            android:layout_width="20dp"
            android:id="@+id/rightFragmentButton"
            android:background="@drawable/emptycircle" />
    </LinearLayout>

</LinearLayout>